clusters/staging/davidepa/fission-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fission-router
  namespace: fission
  annotations:
    kubernetes.io/ingress.class: ingress-nginx-external
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: self-signed
spec:
  tls:
    - hosts:
        - fission.david-epa.nubes.stfc.ac.uk
      secretName: fission-router-tls
  rules:
    - host: fission.david-epa.nubes.stfc.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 80
